pase_sala_jugador

--- a/NEURODASH/views/unirse-sala/salasDispo.html
+++ b/NEURODASH/views/unirse-sala/salasDispo.html
@@ -223,38 +223,38 @@
         </div>
     </div>
   
-  <!-- Modal aviso de perteneciente a sala -->
-  <div class="modal fade" id="modalMiembroSala" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="modalMiembroSala" aria-hidden="true">
-    <div class="modal-dialog modal-dialog-centered">
-      <div class="modal-content modal-nuzit-2">
-          <!-- <div class="modal-header"> -->
-              <!-- header -->
-          <!-- </div> -->
-          <div class="modal-body">
-              <div class="delete-perfli">
-                    <div class="img-modal">
-                        <img src="../../assets/img/iconos/dash-preguntado.png" alt="" class="center-element-x">
+    <!-- Modal aviso de perteneciente a sala -->
+    <div class="modal fade" id="modalMiembroSala" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="modalMiembroSala" aria-hidden="true">
+        <div class="modal-dialog modal-dialog-centered">
+            <div class="modal-content modal-nuzit-2">
+                <!-- <div class="modal-header"> -->
+                    <!-- header -->
+                <!-- </div> -->
+                <div class="modal-body">
+                    <div class="delete-perfli">
+                            <div class="img-modal">
+                                <img src="../../assets/img/iconos/dash-preguntado.png" alt="" class="center-element-x">
+                            </div>
+                            <p class="tuto-text2 text-center message-modal"></p>
+                            <div class="btns-modal-personal">
+                                <button class="shadow__btn red-btn" id="btnSalirSla" data-bs-dismiss="modal" aria-label="Close">
+                                    ABANDONAR
+                                </button>
+                                <button class="shadow__btn pulpura-btn" id="btnSeguirSla">
+                                    SEGUIR
+                                </button>
+                            </div>
+                    
                     </div>
-                    <p class="tuto-text2 text-center message-modal"></p>
-                    <div class="btns-modal-personal">
-                        <button class="shadow__btn red-btn" id="btnSalirSla" data-bs-dismiss="modal" aria-label="Close">
-                            ABANDONAR
-                        </button>
-                        <button class="shadow__btn pulpura-btn" id="btnSalirSla">
-                            SEGUIR
-                        </button>
-                    </div>
-              
-              </div>
-          </div>
-          <div class="modal-footer modal-nuzit-footer-2">
-              <div class="col-12 d-flex justify-content-center">
+                </div>
+                <div class="modal-footer modal-nuzit-footer-2">
+                    <div class="col-12 d-flex justify-content-center">
 
-              </div>
-          </div>
-      </div>
+                    </div>
+                </div>
+            </div>
+        </div>
     </div>
-  </div>
 
 
 
