--- a/NEURODASH/views/creacion_sala/crearsala2.html
+++ b/NEURODASH/views/creacion_sala/crearsala2.html
@@ -18,7 +18,7 @@
             <div class="col-lg-3 fondo sin-padding d-none d-lg-flex flex-column ">
                 <!-- Opciones -->
                 <div class="col">
-                    <div class="container-opciones ">
+                    <div class="container-opciones">
                         <div class="token" id="token">id: <span class="id-sala">-----</span></i></div>
                         <div class="token" id="token">token: <span class="toke-sala">-----</span> <i class="fa-solid fa-copy"></i></div>
                         <div class="admin name-user">-------</div>
@@ -134,6 +134,9 @@
     </div>
 
 
+
+
+
 <!-- Modal de confirmación para expulsar -->
 <div id="expulsarModal" class="expulsar-modal">
     <div class="expulsar-modal-content">
@@ -159,6 +162,36 @@
             </div>
             <div class="toast-body">
                 
+            </div>
+        </div>
+    </div>
+
+     <!-- Modal aviso de perteneciente a sala -->
+     <div class="modal fade" id="modalMiembroSala" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="modalMiembroSala" aria-hidden="true">
+        <div class="modal-dialog modal-dialog-centered">
+            <div class="modal-content modal-nuzit-2">
+                <div class="modal-body">
+                    <div class="delete-perfli">
+                            <div class="img-modal">
+                                <img src="../../assets/img/iconos/dash-preguntado.png" alt="" class="center-element-x">
+                            </div>
+                            <p class="tuto-text2 text-center message-modal"></p>
+                            <div class="btns-modal-personal">
+                                <button class="shadow__btn red-btn" id="btnSalirSla" data-bs-dismiss="modal" aria-label="Close">
+                                    ABANDONAR
+                                </button>
+                                <button class="shadow__btn pulpura-btn" id="btnSalirSla">
+                                    SEGUIR
+                                </button>
+                            </div>
+                    
+                    </div>
+                </div>
+                <div class="modal-footer modal-nuzit-footer-2">
+                    <div class="col-12 d-flex justify-content-center">
+
+                    </div>
+                </div>
             </div>
         </div>
     </div>
