--- a/NEURODASH/assets/css/pages/topi.css
+++ b/NEURODASH/assets/css/pages/topi.css
@@ -81,6 +81,10 @@ background-blend-mode: soft-light;
   width: 80px;
 }
 
+/* #ocul{
+  display: none;
+} */
+
 /*------------------------------------- imagen elefante ------------------------------------- */
 
 .lgoTop{
