--- a/NEURODASH/views/entrenamiento/tutorialEntrenamiento.html
+++ b/NEURODASH/views/entrenamiento/tutorialEntrenamiento.html
@@ -11,12 +11,6 @@
 </head>
 <body class="backgound-dos" style="height: 100vh;">
   <div class="container-fluid seccion active" id="tuto1" style="height: 100%;">
-    <div class="row mt-2">
-      <div class="col-12 d-flex justify-content-start align-items-center">
-        <a href="tematicaEntrenamiento.html"><img src="../../assets/img/iconos/devolver.png" alt="boton confi" class="ico-devolver"></a>
-      </div>
-    </div>
-
 
     <div class="row">
       <div class="col-lg-9 col-12 d-flex align-items-center justify-content-center">
@@ -60,13 +54,13 @@
 
       <div class="row mt-2">
         <div class="col-12 d-flex justify-content-start">
-          <a href="tutorialEntrenamiento.html"><img src="../../assets/img/iconos/devolver.png" alt="boton confi" class="ico-devolver"></a>
+          <a href="../home.html"><img src="../../assets/img/iconos/home.png" alt="boton confi" class="ico-tut"></a>
         </div>
       </div>
 
 
       <div class="row">
-        <div class="col-lg-6 col-12 d-flex align-items-center justify-content-center">
+        <div class="col-lg-9 col-12 d-flex align-items-center justify-content-center">
           <div class="cuadricula-gl d-flex justify-content-center flex-column">
             <div class="tutorial">
               <div class="container">
@@ -103,14 +97,7 @@
           </div>
         </div>  
 
-        <div class="col-lg-3 col-12 d-flex align-items-end">
-          <div class="col-12 d-flex justify-content-center">
-            <a href="rondas.html" class="btnTuto2" style="background-color: rgb(11, 216, 96); width: 50%;">
-                NEXT
-            </a>        
-          </div>
-        </div>
-
+       
         
 
 
