--- a/NEURODASH/views/home.html
+++ b/NEURODASH/views/home.html
@@ -34,15 +34,6 @@
           </button>
           <ul class="dropdown-menu mt-3 bg-dark menu-user">
             <li class="m-2 p-2">
-              <!-- <div class="row aling-item-centerN">
-                <div class="text-center col-7 menu me-2 ">
-                  <img class="icon-home2" src="../assets/img/iconos-desarrollo/icono-user.svg" alt="User" />
-                  <span class="text-white">Yisus</span>
-                </div>
-                <div class="col-4 menu text-center" data-bs-toggle="modal" data-bs-target="#modalBonos">
-                  <img class="icon-home3" src="../assets/img/iconos-desarrollo/img-bonos.png" alt="Bonos" />
-                </div>
-              </div> -->
             </li>
             <li class="m-2">
               <div class="info">
@@ -50,22 +41,7 @@
                 <label class="text-white col-form-label name_user"></label>
               </div>
             </li>
-            <!-- <li class="m-2 menu p-2">
-              <span class="text-white">Exp:</span>
-              <div class="progress" role="progressbar" aria-label="Barra de progreso" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100">
-                <div class="progress-bar" style="width: 75%">1500/2000</div>
-              </div>
-            </li> -->
-          <!-- <li class="m-2">
-              <div class="row aling-item-centerN">
-                <div class="col-9">
-                  <label class="text-white col-form-label">500 Exp y llegarás al Rango Cristal</label>
-                </div>
-                <div class="col-3 aling-item-centerN">
-                  <img class="icon-home" src="../assets/img/iconos-desarrollo/icono-rango.png" alt="Rango" />
-                </div>
-              </div>
-            </li> -->
+      
             <li class="text-center">
               <div class="info-sesion">
                 <a href="../model/public/cerrarSession.php" class="btn fondo-btn2 m-2">Cerrar Sesión</a>
@@ -76,16 +52,9 @@
         
         <!-- Información de ligas -->
         <div class="dropdown ligas">
-          <!-- <button type="button" class="btn fondo-btn btn-nav" data-bs-toggle="dropdown" aria-expanded="false" aria-label="Menú de ligas">
-            <span>Ligas:</span>
-            <img class="icon-navLigas" src="../assets/img/iconos-desarrollo/icono-rango.png" alt="Icono de ligas" />
-          </button> -->
+         
           
           <div class="dropdown-menu dropdown-menu-end justify-content-center dropdown-menu-lg-start mt-3 bg-dark p-2" style="width: 20rem;">
-            <!-- <div class="aling-item-centerN m-2">
-              <h5 class="txtliga">BRONCE</h5>
-              <img class="icon-liga" src="../assets/img/iconos-desarrollo/icono-rango.png" alt="Liga" />
-            </div> -->
             <table class="table table-danger table-bordered">
               <thead>
                 <tr>
@@ -113,75 +82,20 @@
           <div class="offcanvas-body">
             <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
               <!-- Opciones adicionales (Historial, Notificaciones, Configuraciones) -->
-              <!-- <li class="nav-item m-1">
-                <div class="dropdown">
-                  <button type="button" class="btn fondo-btn btn-nav" data-bs-toggle="dropdown" aria-expanded="false">
-                    <img class="icon-home" src="../assets/img/iconos/icon-historial.png" alt="Historial" />
-                  </button>
-                  <ul class="bg-dark dropdown-menu mt-3">
-                    <li class="m-2">
-                      <div class="menu">
-                        <img class="icon-home" src="../assets/img/iconos-desarrollo/Icono-podio.png" alt="Podio" />
-                        <span class="text-white">Yisus</span>
-                        <span class="text-podio">+1000</span>
-                      </div>
-                    </li>
-                    <li class="m-2">
-                      <div class="menu">
-                        <img class="icon-home" src="../assets/img/iconos-desarrollo/Icono-podio.png" alt="Podio" />
-                        <span class="text-white">Yisus</span>
-                        <span class="text-podio">+1000</span>
-                      </div>
-                    </li>
-                    <li class="m-2">
-                      <div class="menu">
-                        <img class="icon-home" src="../assets/img/iconos-desarrollo/Icono-podio.png" alt="Podio" />
-                        <span class="text-white">Yisus</span>
-                        <span class="text-podio">+1000</span>
-                      </div>
-                    </li>
-                    <li class="m-2">
-                      <div class="menu">
-                        <img class="icon-home" src="../assets/img/iconos-desarrollo/Icono-podio.png" alt="Podio" />
-                        <span class="text-white">Yisus</span>
-                        <span class="text-podio">+1000</span>
-                      </div>
-                    </li>
-                  </ul>
-                </div>
-              </li> -->
               <li class="nav-item m-1">
                 <div class="dropdown">
-                  <button type="button" class="btn fondo-btn btn-nav" data-bs-toggle="dropdown" aria-expanded="false">
-                    <div class="notification aling-item-centerN">
-                      <div class="bell-container">
-                        <div class="bell"></div>
-                      </div>
-                    </div>
-                  </button>
-                  <ul class="dropdown-menu dropdown-menu-end bg-dark mt-3">
-                    <li class="m-2">
-                      <a href="#" class="dropdown-item menu p-2">
-                        <img class="icon-home" src="../assets/img/iconos/icon-msg.png" alt="Mensaje" />
-                        <span class="text-white">Felicidades has alcanzado ...</span>
-                      </a>
-                    </li>
-                    <li class="m-2">
-                      <a href="#" class="dropdown-item menu p-2">
-                        <img class="icon-home" src="../assets/img/iconos/icon-msg.png" alt="" />
-                        <span class="text-white">Perdiste 10 puntos por abandonar de sala</span>
-                      </a>
-                    </li>
-                    <li class="m-2">
-                      <a href="#" class="dropdown-item menu p-2">
-                        <img class="icon-home" src="../assets/img/iconos/icon-danger.png" alt="" />
-                        <span class="text-white">Se ha cambiado la contraseña eres tu?</span>
-                      </a>
-                    </li>
-
-                </ul>
-              </div>
-            </li>
+                  <a href="creditos/credito.html" class="btn fondo-btn btn-nav">
+                    <img class="icon-home" src="../assets/img/iconos-desarrollo/creditos.png" alt="Historial" />
+                  </a>
+                </div>
+              </li> 
+              <li class="nav-item m-1">
+                <div class="dropdown">
+                  <a href="entrenamiento/tutorialEntrenamiento.html" class="btn fondo-btn btn-nav">
+                    <img class="icon-home" src="../assets/img/iconos-desarrollo/info.png" alt="Historial" />
+                  </a>
+                </div>
+              </li>
             <li class="nav-item m-1">
               <a href="config/configStart.html" class="btn fondo-btn btn-nav">
                 <img class="icon-home" src="../assets/img/iconos/config.png" alt="Configuración" />
@@ -271,111 +185,6 @@
     </div>
   </div>
 
-  <!-- Modal Historial 2 -->
-  <div class="modal fade fondoMdl2 modal-home" id="modalHistorial" aria-labelledby="modalHistorial" aria-hidden="true"
-    tabindex="-1">
-    <div class="modal-dialog modal-dialog-centered">
-      <div class="modal-content bg-dark">
-        <div class="modal-header">
-          <h5 class="modal-title text-white" id="modalHistorialLabel">
-            Historial
-          </h5>
-          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-        </div>
-        <div class="modal-body text-center">
-          <div class="row">
-            <div class="col-12 mb-3">
-              <div class="menu">
-                <img class="icon-home" src="../assets/img/iconos-desarrollo/Icono-podio.png" alt="Icono de podio" />
-                <span class="text-white ms-2">Yisus</span>
-                <span class="text-podio ms-auto">+1000</span>
-              </div>
-            </div>
-            <div class="col-12 mb-3">
-              <div class="menu">
-                <img class="icon-home" src="../assets/img/iconos-desarrollo/Icono-podio.png" alt="Icono de podio" />
-                <span class="text-white ms-2">Yisus</span>
-                <span class="text-podio ms-auto">+1000</span>
-              </div>
-            </div>
-            <div class="col-12 mb-3">
-              <div class="menu">
-                <img class="icon-home" src="../assets/img/iconos-desarrollo/Icono-podio.png" alt="Icono de podio" />
-                <span class="text-white ms-2">Yisus</span>
-                <span class="text-podio ms-auto">+1000</span>
-              </div>
-            </div>
-          </div>
-        </div>
-        <div class="modal-footer">
-          <button type="button" class="btn fondo-btn" data-bs-target="#menu" data-bs-toggle="modal">
-            <img class="icon-home" src="../assets/img/iconos/deshacer.png" alt="" />
-          </button>
-        </div>
-      </div>
-    </div>
-  </div>
-
-  <!-- Modal Notificaciones 2 -->
-  <div class="modal fade fondoMdl3 modal-home" id="modalNotificaciones" aria-hidden="true"
-    aria-labelledby="modalNotificaciones" tabindex="-1">
-    <div class="modal-dialog modal-dialog-centered">
-      <div class="modal-content bg-dark">
-        <div class="modal-header">
-          <h5 class="modal-title text-white" id="modalNotificacionesLabel">
-            Notificaciones
-          </h5>
-          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-        </div>
-        <div class="modal-body">
-          <div class="row">
-            <div class="col-12 m-2">
-              <a href="#" class="dropdown-item menu p-2">
-                <div class="row p-0 m-0">
-                  <div class="col-2 aling-item-centerN">
-                    <img class="icon-home" src="../assets/img/iconos/icon-msg.png" alt="" />
-                  </div>
-                  <div class="col-10">
-                    <p class="text-white text-truncate">Felicidades, has alcando un nuevo rango</p>
-                  </div>
-                </div>
-
-              </a>
-            </div>
-            <div class="col-12 m-2">
-              <a href="#" class="dropdown-item menu p-2">
-                <div class="row p-0 m-0">
-                  <div class="col-2 aling-item-centerN">
-                    <img class="icon-home" src="../assets/img/iconos/icon-msg.png" alt="" />
-                  </div>
-                  <div class="col-10">
-                    <p class="text-white text-truncate">Perdiste 10 puntos por abandonar de sala</p>
-                  </div>
-                </div>
-              </a>
-            </div>
-            <div class="col-12 m-2">
-              <a href="#" class="dropdown-item menu p-2">
-                <div class="row p-0 m-0">
-                  <div class="col-2 aling-item-centerN">
-                    <img class="icon-home" src="../assets/img/iconos/icon-danger.png" alt="" />
-                  </div>
-                  <div class="col-10 aling-item-centerN"">
-                      <p class=" text-white text-truncate">Se ha cambiado la contraseña eres tu?</p>
-                  </div>
-                </div>
-              </a>
-            </div>
-          </div>
-        </div>
-        <div class="modal-footer">
-          <button type="button" class="btn fondo-btn" data-bs-target="#menu" data-bs-toggle="modal">
-            <img class="icon-home" src="../assets/img/iconos/devolver.png" alt="" />
-          </button>
-        </div>
-      </div>
-    </div>
-  </div>
 
   <!-- Modal Configuracion 1 -->
   <div class="modal fade fondoMdl modal-home" id="menu" tabindex="-1" aria-labelledby="exampleModalLabel"
@@ -392,19 +201,15 @@
           <!-- Contenido del modal -->
           <div class="aling-item-centerN flex-column">
             <!-- boton de Historial -->
-            <button type="button" class="btn fondo-btn mb-3" data-bs-toggle="modal" data-bs-target="#modalHistorial">
-              <img class="icon-home" src="../assets/img/iconos/icon-historial.png" alt="" />
-            </button>
+            <a href="creditos/credito.html" class="btn fondo-btn btn-nav">
+              <img class="icon-home" src="../assets/img/iconos-desarrollo/creditos.png" alt="Historial" />
+            </a>
 
             <!-- Botón de Notificaciones -->
-            <button type="button" class="btn fondo-btn mb-3" data-bs-toggle="modal"
-              data-bs-target="#modalNotificaciones">
-              <div class="notification aling-item-centerN icon-home">
-                <div class="bell-container">
-                  <div class="bell"></div>
-                </div>
-              </div>
-            </button>
+            <a href="entrenamiento/tutorialEntrenamiento.html" class="btn fondo-btn btn-nav">
+              <img class="icon-home" src="../assets/img/iconos-desarrollo/info.png" alt="Historial" />
+            </a>
+             
 
             <!-- Enlace de Configuraciones -->
             <a href="config/configStart.html" class="btn fondo-btn">
