--- a/NEURODASH/views/topi-memori/memorTopy.html
+++ b/NEURODASH/views/topi-memori/memorTopy.html
@@ -13,7 +13,16 @@
     <div class="container tpMe 100vh">
         <div class="row">
             <div class="col-12 d-flex justify-content-center align-items-center rect">
-                <div class="col-6 d-flex justify-content-center align-items-center">
+                <div class="col-6 d-flex align-items-center">
+                    <a href="">
+                        <img src="../../assets/img/iconos/musica-config.png" alt="" class="configuraciones">
+                      </a>
+                      <a href="">
+                          <img src="../../assets/img/iconos/sonido-config.png" alt="" class="configuraciones">
+                      </a>
+                      <!-- <a href="../home.html" class="hover-icons hidden" id="ocul">
+                        <img src="../../assets/img/iconos/home.png" alt="botón home" class="configuraciones2">
+                      </a> -->
                     TOPI MEMORY
                 </div>
                 <div class="col-6 d-flex justify-content-end align-items-center p-2">
