--- a/NEURODASH/assets/css/pages/entrenamiento.css
+++ b/NEURODASH/assets/css/pages/entrenamiento.css
@@ -39,11 +39,15 @@
 }
 
 
+.ico-tut{
+  width: 50px;
+  height: 50px;
+}
 
 
 /* tematica entrenamiento */
 .logitoCerebro {
-  width: 20%;
+  width: 22%;
   /* max-width: 200px; */
   filter: drop-shadow(0 0 10px rgba(0, 0, 0, 0.911));
   position: relative;
@@ -82,8 +86,7 @@
 
 /* paralelogramo categoria */
 .paralelogramoNum,
-.paralelogramoTer,
-.paralelogramo {
+.paralelogramoTer {
   /* background: #bdc3c7; */
   transform: skew(-20deg);
   position: absolute;
@@ -102,6 +105,16 @@
   box-sizing: border-box;
   height: 40px;
   top: -30px;
+  transform: skew(-20deg);
+  position: absolute;
+  z-index: 2;
+  border-radius: 5px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 300px !important;
+  padding: 10px !important;
+
 
 }
 
@@ -121,9 +134,33 @@
 .cerebroTerm {
   width: 60%;
   filter: drop-shadow(0 0 10px rgba(0, 0, 0, 0.911));
-  animation: flip-scale-2-hor-top 2s linear both;
+  position: relative; /* Necesario para animar posición */
+    animation: bounceFromTop 1.5s ease-out forwards;
+
+  /* animation: flip-scale-2-hor-top 2s linear both; */
 }
 
+
+@keyframes bounceFromTop {
+  0% {
+      transform: translateY(-300px); /* Inicia fuera de la pantalla, arriba */
+      opacity: 0; /* Comienza invisible */
+  }
+  50% {
+      transform: translateY(-50px); /* Rebote hacia abajo */
+      opacity: 1; /* Hace visible */
+  }
+  70% {
+      transform: translateY(0); /* Posición original */
+  }
+  90% {
+      transform: translateY(-15px); /* Rebote ligero */
+  }
+  100% {
+      transform: translateY(0); /* Posición final */
+  }
+}
+/* 
 @keyframes flip-scale-2-hor-top {
   0% {
     -webkit-transform: translateY(0) rotateX(0) scale(1);
@@ -145,7 +182,7 @@
     -webkit-transform-origin: 50% 100%;
     transform-origin: 50% 100%;
   }
-}
+} */
 
 
 .terminosCategoria {
@@ -164,9 +201,33 @@
   width: 80%;
   max-height: 500px;
   overflow-y: auto;
+  background-color: #000000 !important;
+  animation: neon 1.5s ease-in-out infinite alternate; 
 
 }
 
+
+
+.terminosCategoria::-webkit-scrollbar {
+  width: 12px;
+  height: 12px;
+}
+
+.terminosCategoria::-webkit-scrollbar-track {
+  background: #d9d9d9; 
+  border-radius: 10px;
+}
+
+.terminosCategoria::-webkit-scrollbar-thumb {
+  background-color: #d200cf;
+  border-radius: 10px;
+  border: 2px solid rgb(193, 0, 193);
+}
+
+.terminosCategoria::-webkit-scrollbar-thumb:hover {
+  border: 2px solid rgb(198, 0, 198);  
+  box-shadow: 0 0 10px rgb(193, 0, 193); 
+}
 /* tutoriales*/
 
 .cerebro-leyendo {
@@ -229,11 +290,11 @@
   height: 250px;
 } */
 
-.clock-container2 {
+/* .clock-container2 {
   width: 180px;
   height: 110px;
   margin-top: 80px;
-}
+} */
 
 /* .clock-circle2,
 .clock-circle {
@@ -249,10 +310,10 @@
   height: 200px;
 } */
 
-.clock-circle2 {
+/* .clock-circle2 {
   width: 180px;
   height: 130px;
-}
+} */
 
 .clock-image {
   width: 100%;
@@ -377,8 +438,7 @@
   margin-bottom: 5px;
 }
 
-.secuenciaTer2,
-.secuenciaTer {
+/* .secuenciaTer2{
   padding-left: 8px;
   padding-right: 8px;
   margin: 0;
@@ -392,17 +452,17 @@
   border-radius: 15px;
   overflow-y: auto;
   overflow-x: hidden;
-}
+} */
 
-
+/* 
 .secuenciaTer {
   max-height: 400px;
-}
+} */
 
-.secuenciaTer2 {
+/* .secuenciaTer2 {
   margin-top: 10px;
   max-height: 340px;
-}
+} */
 
 
 
@@ -576,13 +636,12 @@
   box-shadow: 0px 0px 33px 0px hsl(305, 59%, 51%);
 } */
 
-.overlap-img {
+/* .overlap-img {
   position: absolute;
   z-index: 1;
   top: 130px;
   width: 10%;
-  /* Adjust size as needed */
-}
+} */
 
 /* From Uiverse.io by SelfMadeSystem */
 
@@ -838,10 +897,10 @@
     max-height: 600px;
   }
 
-  .letter {
+  /* .letter {
     font-size: 2.3rem;
 
-  }
+  } */
 
   .logito-podio {
     width: 70%;
@@ -950,6 +1009,18 @@
   }
 
 
+
+  .paralelogramo{
+    width: 250px !important;
+    /* top: -20px; */
+    height: 50px;
+  }
+
+  .ico-devolver{
+    margin-top: 0px;
+    width: 70px;
+  }
+  
   .paralelogramoTer {
     width: 250px !important;
     height: 8%;
@@ -989,9 +1060,9 @@
     margin-left: 50%;
   }
 
-  .btnTuto2 {
+  /* .btnTuto2 {
     margin-left: 50%;
-  }
+  } */
 
 
   .demostracion-bloque {
@@ -1004,81 +1075,17 @@
     display: none;
   }
 
-  .secuenciaTer {
-    width: 94%;
-    margin-top: 20px;
-    max-height: 400px;
-    overflow-y: auto;
-  }
+
 
   .glitch {
     display: none;
   }
 
-  /* .clock-container{
-  width: 150px;
-  height: 120px;
-  margin-top: 60px;
-} */
-
-  /* .clock-circle {
-  top: -30px; 
-  width: 150px;
-  height: 90px;
-} */
-
-  /* .digital-clock {
-  font-size: 1.5rem;
-  border-radius: 10px;
-  margin-top: 50px;
-  padding: 3px 20px;
-}
- */
-
-  .secuenciaTer2 {
-    width: 97%;
-    margin-top: 20px;
-
-  }
-
-  .clock-container2 {
-    width: 160px;
-    height: 90px;
-    margin-top: 50px;
-  }
-
-  .clock-circle2 {
-    top: -40px;
-    width: 160px;
-    height: 90px;
-  }
-
-  .digital-clock2 {
-    margin-top: 40px;
-  }
-
-
-  /* .card-clasi {
-  width: 90%;
-
-} */
-
-  .overlap-img {
-    width: 30%;
-    top: 23%;
-  }
-
-  /* .clasifi2{
-  width: 80%;
-} */
-
+  
   .clasifi {
     padding-right: 20px;
   }
 
-  .regresar {
-    width: 60%;
-  }
 
 }
 
@@ -1111,8 +1118,17 @@
     display: none;
   }
 
-
 }
+
+
+
+@media only screen and (min-width: 500px)and (max-width: 977px) {
+  .cerebroTerm{
+    display: none;
+  }
+
+  }
+
 
 /* iphone de jesus  */
 @media only screen and (max-width: 320px) and (max-height: 568px) {
@@ -1127,10 +1143,7 @@
     max-height: 320px;
   }
 
-  .letter {
-    font-size: 2rem;
-
-  }
+  
 
   .imgPodioLg {
     width: 70px;
@@ -1276,6 +1289,11 @@
     width: 60px;
   }
 
+  .icono-home2 {
+    width: 60px;
+  }
+
+
   .difi {
     width: 90%;
   }
@@ -1342,66 +1360,6 @@
   }
 
 
-  .btnTuto2 {
-    padding: 0;
-    margin: 0;
-  }
-
-
-  .secuenciaTer {
-    width: 94%;
-    margin-top: 30px;
-    max-height: 300px;
-    overflow-y: auto;
-  }
-
-  /* .clock-circle{
-  display: none;
-} */
-
-  /* .clock-container{
-  height: 80px;
-  margin-top: 20px;
-} */
-
-  /* 
-.digital-clock {
-  margin-top: 0px;
-} */
-
-
-
-  .secuenciaTer2 {
-    margin-top: 20px;
-    max-height: 270px;
-  }
-
-  .clock-container2 {
-    width: 160px;
-    height: 50px;
-    margin-top: 10px;
-  }
-
-  .clock-circle2 {
-    display: none;
-  }
-
-  .digital-clock2 {
-    margin-top: 0px;
-  }
-
-
-
-  /* .card-clasi {
-  width: 90%;
-
-} */
-
-  .overlap-img {
-    width: 30%;
-    top: 5%;
-  }
-
   .clasifi2 {
     width: 80%;
     margin-top: 20px;
@@ -1412,9 +1370,7 @@
     margin-top: 30px;
   }
 
-  .regresar {
-    width: 60%;
-  }
+ 
 
 }
 
@@ -1430,9 +1386,7 @@
     max-height: 450px;
   }
 
-  .letter {
-    font-size: 2rem;
-  }
+ 
 }
 
 
@@ -1450,23 +1404,6 @@
 
   }
 
-
-  .secuenciaTer {
-    width: 98%;
-    max-height: 800px;
-  }
-
-
-  /* .card-clasi {
-  width: 90%;
-
-} */
-
-  .overlap-img {
-    width: 30%;
-    top: 27%;
-  }
-
   .clasifi2 {
     width: 80%;
     margin-top: 20px;
@@ -1477,10 +1414,9 @@
     margin-top: 30px;
   }
 
-  .regresar {
-    width: 60%;
-  }
 
 
 
 }
+
+
