--- a/NEURODASH/views/entrenamiento/entrenamiento.html
+++ b/NEURODASH/views/entrenamiento/entrenamiento.html
@@ -19,14 +19,22 @@
 
       <div class="row">
         <div class="col-6 d-flex justify-content-start">
-          <a href="#" id="configLink" title="Configuraciones" class="hover-icons">
-            <img src="../../assets/img/iconos/config.png" alt="botón configuración" class="configuraciones">
-          </a>
-        </div>
-        <div class="col-6 d-flex justify-content-end">
           <a href="../home.html" class="hover-icons">
             <img src="../../assets/img/iconos/home.png" alt="botón home" class="icono-home">
           </a>
+        </div>
+        <div class="col-6 d-flex justify-content-end">
+          <a href="" class="hover-icons">
+            <img src="../../assets/img/iconos/musica-config.png" alt="" class="icono-home2 me-3">
+          </a>
+          <a href="" class="hover-icons">
+              <img src="../../assets/img/iconos/sonido-config.png" alt="" class="icono-home2">
+          </a>
+
+          <!-- <a href="#" id="configLink" title="Configuraciones" class="hover-icons">
+            <img src="../../assets/img/iconos/config.png" alt="botón configuración" class="configuraciones">
+          </a> -->
+          
         </div>
       </div>
       <div class="container-niveles aling-item-centerN" style="height: 80vh;">
@@ -51,11 +59,31 @@
 
     <!-- escoger items  -->
     <section class="section-2 disabled">
-      <div class="row">
+      <!-- <div class="row">
         <div class="col-12 d-flex justify-content-start">
           <a href="#" id="backButton">
-            <img src="../../assets/img/iconos/devolver.png" alt="boton confi" class="ico-devolver">
+            <img src="../../assets/img/iconos/devo.png" alt="boton confi" class="ico-devolver">
           </a>
+        </div>
+      </div> -->
+      <div class="row">
+        <div class="col-6 d-flex justify-content-start">
+          <a href="#" id="backButton">
+            <img src="../../assets/img/iconos/devo.png" alt="boton confi" class="ico-devolver">
+          </a>
+        </div>
+        <div class="col-6 d-flex justify-content-end">
+          <a href="" class="hover-icons">
+            <img src="../../assets/img/iconos/musica-config.png" alt="" class="icono-home2 me-3">
+          </a>
+          <a href="" class="hover-icons">
+              <img src="../../assets/img/iconos/sonido-config.png" alt="" class="icono-home2">
+          </a>
+
+          <!-- <a href="#" id="configLink" title="Configuraciones" class="hover-icons">
+            <img src="../../assets/img/iconos/config.png" alt="botón configuración" class="configuraciones">
+          </a> -->
+          
         </div>
       </div>
 
@@ -84,13 +112,36 @@
 
     <!-- escoger subItem -->
     <section class="section-3 disabled">
+
       <div class="row">
-        <div class="col-12 d-flex justify-content-start align-items-center">
+        <div class="col-6 d-flex justify-content-start">
           <a href="#" id="backButton2">
-            <img src="../../assets/img/iconos/devolver.png" alt="boton confi" class="ico-devolver">
+            <img src="../../assets/img/iconos/devo.png" alt="boton confi" class="ico-devolver">
           </a>
         </div>
+        <div class="col-6 d-flex justify-content-end">
+          <a href="" class="hover-icons">
+            <img src="../../assets/img/iconos/musica-config.png" alt="" class="icono-home2 me-3">
+          </a>
+          <a href="" class="hover-icons">
+              <img src="../../assets/img/iconos/sonido-config.png" alt="" class="icono-home2">
+          </a>
+
+          <!-- <a href="#" id="configLink" title="Configuraciones" class="hover-icons">
+            <img src="../../assets/img/iconos/config.png" alt="botón configuración" class="configuraciones">
+          </a> -->
+          
+        </div>
       </div>
+
+
+      <!-- <div class="row">
+        <div class="col-12 d-flex justify-content-start align-items-center">
+          <a href="#" id="backButton2">
+            <img src="../../assets/img/iconos/devo.png" alt="boton confi" class="ico-devolver">
+          </a>
+        </div>
+      </div> -->
 
       <div class="row">
         <div class="col-lg-4 col-12 d-flex align-items-center">
@@ -103,7 +154,7 @@
             <div class="paralelogramoTer">
               <h5 class="titulo-tematica">TÉRMINOS</h5>
             </div>
-            <div class="card card-item terminosCategoria" style="background-color: #88fa53e0; border-radius: 15px;">
+            <div class="card card-item terminosCategoria" style="border-radius: 15px;">
               <!-- --- generado por la DB -->
             </div>
           </div>
