--- a/NEURODASH/views/juego/ranking2.html
+++ b/NEURODASH/views/juego/ranking2.html
@@ -57,6 +57,7 @@
                             <i class="fas fa-star cor1"></i> 
     
                         </div>
+                        
                         <div class="cardPd">
                             <i class="fas fa-star cor2"></i>
                             <div class="primero">
@@ -66,7 +67,7 @@
                                 </div>
                             </div>
                             <div class="tercero">
-                                <h1><em>Natalia</em></h1>
+                                <h1 class="text-center">Natalia</h1>
                             </div>
                             <div class="cuarto">
                                 <h5>1000</h5>
@@ -87,7 +88,7 @@
                                 </div>
                             </div>
                             <div class="tercero">
-                                <h1><em>Natalia</em></h1>
+                                <h1 class="text-center">Natalia</h1>
                             </div>
                             <div class="cuarto">
                                 <h5>1000</h5>
@@ -108,7 +109,7 @@
                                 </div>
                             </div>
                             <div class="tercero">
-                                <h1><em>Natalia</em></h1>
+                                <h1 class="text-center">Natalia</h1>
                             </div>
                             <div class="cuarto">
                                 <h5>1000</h5>
@@ -129,28 +130,7 @@
                                 </div>
                             </div>
                             <div class="tercero">
-                                <h1><em>Natalia</em></h1>
-                            </div>
-                            <div class="cuarto">
-                                <h5>1000</h5>
-                                <i class="fas fa-trophy" style="color: gold;"></i>
-                                <div class="avatarCopa">
-                                    <img src="../../assets/img/iconos-principales/trofeo.jpeg" alt="Avatar del jugador">
-                                </div>
-                            </div>
-                            <i class="fas fa-star cor1"></i> 
-    
-                        </div>
-                        <div class="cardPd">
-                            <i class="fas fa-star cor2"></i>
-                            <div class="primero">
-                                <h5>1</h5>
-                                <div class="avatarUs">
-                                    <img src="../../assets/img/avatars/avatar1.jpg" alt="Avatar del jugador">
-                                </div>
-                            </div>
-                            <div class="tercero">
-                                <h1><em>Natalia</em></h1>
+                                <h1 class="text-center">Natalia</h1>
                             </div>
                             <div class="cuarto">
                                 <h5>1000</h5>
@@ -172,7 +152,7 @@
                                 </div>
                             </div>
                             <div class="tercero">
-                                <h1><em>Natalia</em></h1>
+                                <h1 class="text-center">Natalia</h1>
                             </div>
                             <div class="cuarto">
                                 <h5>1000</h5>
@@ -194,7 +174,7 @@
                                 </div>
                             </div>
                             <div class="tercero">
-                                <h1><em>Natalia</em></h1>
+                                <h1 class="text-center">Natalia</h1>
                             </div>
                             <div class="cuarto">
                                 <h5>1000</h5>
@@ -215,7 +195,7 @@
                                 </div>
                             </div>
                             <div class="tercero">
-                                <h1><em>Natalia</em></h1>
+                                <h1 class="text-center">Natalia</h1>
                             </div>
                             <div class="cuarto">
                                 <h5>1000</h5>
