--- a/NEURODASH/views/juego/salaEspera.html
+++ b/NEURODASH/views/juego/salaEspera.html
@@ -38,8 +38,34 @@
     </div>
   </div>
 
+  <button type="button" class="mdChatt" data-bs-toggle="modal" data-bs-target="#chatModal">
+    <img src="../../assets/img/iconos-desarrollo/chatear.png" alt="salir_sala" class="salir-sala-user">
+  </button>
+
+  <div class="modal fade" id="chatModal" tabindex="-1" aria-labelledby="chatModalLabel" aria-hidden="true">
+    <div class="modal-dialog modal-dialog-centered">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" id="chatModalLabel">Chat Virtual</h5>
+                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+            </div>
+            <div class="modal-body">
+                <div class="chat-container">
+                    <div class="chat-box" id="chatBox">
+                        <!-- Messages will appear here -->
+                    </div>
+                    <div class="chat-input">
+                        <input type="text" id="userInput" placeholder="Escribe un mensaje..." />
+                        <button id="sendButton">Enviar</button>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+  </div>
 
   
+
   <!-- Modal -->
   <div class="modal modal-espera fade " id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
     <div class="modal-dialog modal-sm modal-dialogz modal-dialog-centered">
