--- a/NEURODASH/views/juego/index.html
+++ b/NEURODASH/views/juego/index.html
@@ -96,7 +96,7 @@
                     return;
                 }
 
-                window.location.href = `chat.html?room=${encodeURIComponent(roomCode)}&username=${encodeURIComponent(username)}`;
+                window.location.href = `salaEspera.html?room=${encodeURIComponent(roomCode)}&username=${encodeURIComponent(username)}`;
             });
         });
     </script>
