--- a/NEURODASH/views/unirse-sala/salasDispo.html
+++ b/NEURODASH/views/unirse-sala/salasDispo.html
@@ -236,10 +236,7 @@
                                 <img src="../../assets/img/iconos/dash-preguntado.png" alt="" class="center-element-x">
                             </div>
                             <p class="tuto-text2 text-center message-modal"></p>
-                            <div class="btns-modal-personal">
-                                <button class="shadow__btn red-btn" id="btnSalirSla" data-bs-dismiss="modal" aria-label="Close">
-                                    ABANDONAR
-                                </button>
+                            <div class="col-12 d-flex justify-content-center">
                                 <button class="shadow__btn pulpura-btn" id="btnSeguirSla">
                                     SEGUIR
                                 </button>
