--- a/NEURODASH/views/juego/salaEspera.html
+++ b/NEURODASH/views/juego/salaEspera.html
@@ -116,6 +116,27 @@
     </div>
   </div>
 
+  <!-- alerta de salida -->
+  <div class="modal fade" id="modalMiembroSala" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="modalMiembroSala" aria-hidden="true">
+    <div class="modal-dialog modal-dialog-centered">
+        <div class="modal-content modal-nuzit-2">
+            <div class="modal-body">
+                <div class="delete-perfli">
+                    <div class="img-modal">
+                        <img src="../../assets/img/iconos/dash-preguntado.png" alt="" class="center-element-x">
+                    </div>
+                    <p class="tuto-text2 text-center message-modal"></p>
+                </div>
+            </div>
+            <div class="modal-footer modal-nuzit-footer-2">
+                <div class="col-12 d-flex justify-content-center">
+
+                </div>
+            </div>
+        </div>
+    </div>
+  </div>
+
   <div class="loader-default">
     <div class="loader-circle-9">
         Loading
